# publish-amqp-changefeed

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
