[package]
name = "publish_amqp_changefeed"
version = "0.1.0"
authors = ["xbinxu <xbinxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.7", features = ["attributes"] }
async-global-executor = "1.4"
lapin-async-global-executor = "1.0"
anyhow = "1.0"
futures-lite = "1.11"
lapin = { version = "1.5", features = ["codegen"] }
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
surf = "2.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
